<resources>
    <string name="app_name">EasyMapua</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="i_am_a">I am a:</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>
    <string name="vendor">Vendor</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in.</string>
    <string name="rate">Rate</string>
    <string name="schedule">Schedule</string>
    <string name="menu">Menu</string>
    <string name="consultation">Consultation</string>
    <string name="create_a_new_account_sign_up">Create a new account? Sign up</string>
    <string name="name">Name</string>
    <string name="course_code">Course Code</string>
    <string name="room">Room</string>
    <string name="task">Task</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="select_date">Select Date</string>
    <string name="store">Store</string>
    <string name="food">Food</string>
    <string name="food_item">Food Item</string>
    <string name="price">Price</string>
    <string name="select_store_to_vew_menu">Select Store to Vew Menu</string>
    <string name="subject">Subject</string>
    <string name="write_your_message_rating_thoughts_about_the_subject">Write your message/rating/thoughts about the subject</string>
    <string name="post">Post</string>
    <string name="select_store_to_rate">Select Store to Rate</string>
    <string name="add_rating">Add Rating</string>
    <string name="select_store_to_view_ratings">Select Store to View Ratings</string>
    <string name="load_schedule">Load Schedule</string>
    <string name="show_consulation">Show Consulation</string>
    <string name="add_food">Add Food</string>
    <string name="post_rating">Post Rating</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="view_menu">View Menu</string>
    <string name="view_ratings">View Ratings</string>
    <string name="don_t_have_an_account_sign_up">Do not have an account? Sign up</string>
    <string name="achieve_greatness_with_us">Achieve Efficiency With Us</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="post_a_rating">Post a Rating</string>
    <string name="view_schedule">View Schedule</string>
    <string name="admin">Admin</string>
    <string name="sort_price">Sort Price</string>
    <string name="sort_food">Sort Food</string>
    <string name="Confirm">Confirm Password</string>
    <string name="title_activity_email_register">EmailRegister</string>
    <string name="peso">₱ </string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="email">Email</string>
    <string name="rate_the_store_from_1_5">Rate the Store from 1-5</string>
    <string name="doubleZero">.00</string>
</resources>