<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFEA"
    tools:context=".Login">

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/exo_2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEdit" />

    <EditText
        android:id="@+id/loginEdit"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/ic_user"
        android:fontFamily="@font/exo_2"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="275dp"
        android:layout_height="70dp"
        android:layout_marginTop="484dp"
        android:enabled="true"
        android:fontFamily="@font/exo_2"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp"
        app:backgroundTint="#454A87"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:fontFamily="@font/exo_2_medium"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#000000"
        android:textSize="13sp"
        app:backgroundTint="#CACACA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:layout_constraintVertical_bias="0.276" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="35dp"
        android:layout_height="37dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="394dp"
        android:layout_height="271dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_transparent_crop" />


</androidx.constraintlayout.widget.ConstraintLayout>